--- a/setup/docker/docker-compose.yaml
+++ b/setup/docker/docker-compose.yaml
@@ -25,3 +25,12 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092,PLAINTEXT_HOST://localhost:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  cli:
+    image: confluentinc/cp-kafka:5.4.0
+    hostname: cli
+    container_name: cli
+    depends_on:
+      - broker
+    entrypoint: /bin/sh
+    tty: true
