--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -121,3 +122,5 @@ hs_err_pid*
 */**/.project
 */**/.settings
 */**/.vscode
+apps/kafka-streams-stateless/.sts4-cache/classpath-data.json
+apps/kafka-streams-stateless/target/*
