--- a/apps/kafka-client-basic/pom.xml
+++ b/apps/kafka-client-basic/pom.xml
@@ -18,7 +18,11 @@
   </properties>
 
   <dependencies>
-
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
