add compose yaml for Schema Registry

--- a/setup/docker/docker-compose-with-schema.yaml
+++ b/setup/docker/docker-compose-with-schema.yaml
@@ -27,6 +27,20 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       CONFLUENT_SUPPORT_METRICS_ENABLE: "false"
 
+  schema-registry:
+    image: confluentinc/cp-schema-registry:5.4.0
+    hostname: schema-registry
+    container_name: schema-registry
+    depends_on:
+      - zookeeper
+      - broker
+    ports:
+      - "8081:8081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:32181'
+      SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: WARN
+
   cli:
     image: confluentinc/cp-kafka:5.4.0
     hostname: cli
