update application dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@ hs_err_pid*
 apps/kafka-streams-stateless/.sts4-cache/classpath-data.json
 apps/kafka-streams-stateless/target/*
 apps/kafka-streams-stateful/target/*
+
+.idea
