--- a/apps/kafka-client-basic/pom.xml
+++ b/apps/kafka-client-basic/pom.xml
@@ -25,6 +25,11 @@
             <version>2.8.6</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.0-alpha1</version>
