--- a/apps/kafka-streams-stateless/pom.xml
+++ b/apps/kafka-streams-stateless/pom.xml
@@ -7,15 +7,13 @@
     <groupId>net.ponzmild</groupId>
     <artifactId>kafka-streams-stateless</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <name>kafka-streams-stateless</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <kafka.version>2.8.0</kafka.version>
     </properties>
 
     <dependencies>
@@ -27,12 +25,12 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
-            <version>2.6.0</version>
+            <version>${kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>2.6.0</version>
+            <version>${kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -54,7 +52,7 @@
                 <plugin>
                     <groupId>com.google.cloud.tools</groupId>
                     <artifactId>jib-maven-plugin</artifactId>
-                    <version>2.5.2</version>
+                    <version>3.0.0</version>
                     <configuration>
                         <!-- <from>
                           <image>gcr.io/distroless/java:11</image>
