--- a/setup/k8s/kafka-persistent-single.yaml
+++ b/setup/k8s/kafka-persistent-single.yaml
@@ -1,27 +1,34 @@
 # Downloaded from https://strimzi.io/examples/latest/kafka/kafka-persistent-single.yaml
-apiVersion: kafka.strimzi.io/v1beta1
+apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
   name: my-cluster
 spec:
   kafka:
-    version: 2.5.0
+    version: 2.7.0
     replicas: 1
     listeners:
-      plain: {}
-      tls: {}
+      - name: plain
+        port: 9092
+        type: internal
+        tls: false
+      - name: tls
+        port: 9093
+        type: internal
+        tls: true
     config:
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
       transaction.state.log.min.isr: 1
-      log.message.format.version: "2.5"
+      log.message.format.version: "2.7"
+      inter.broker.protocol.version: "2.7"
     storage:
       type: jbod
       volumes:
-      - id: 0
-        type: persistent-claim
-        size: 100Gi
-        deleteClaim: false
+        - id: 0
+          type: persistent-claim
+          size: 100Gi
+          deleteClaim: false
   zookeeper:
     replicas: 1
     storage:
@@ -31,4 +38,3 @@ spec:
   entityOperator:
     topicOperator: {}
     userOperator: {}
-
