--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,11 @@ updates:
     directory: /apps/kafka-client-basic
     schedule:
       interval: "daily"
+  - package-ecosystem: "maven"
+    directory: /apps/kafka-streams-stateless
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "maven"
+    directory: /apps/kafka-streams-stateful
+    schedule:
+      interval: "daily"
